[package]
name = "symbolize"
version = "0.1.0"
edition = "2021"
authors = ["rzru <rzzzzru@gmail.com>"]
description = "This crate allows you to convert raster images to their symbolic versions"
readme = "README.md"
license = "MIT"
repository = "https://github.com/rzru/symbolize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
clap = { version = "3.2.5", features = ["derive"] }
crossterm = "0.23.2"
